--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "pixi.js": "^8.8.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@pixi/react": "^7.1.2",
+    "pixi.js": "^7.4.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
