--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "pixi.js": "^7.4.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
