--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@pixi/react": "^7.1.2",
+    "gsap": "^3.12.7",
     "pixi.js": "^7.4.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
